--- a/index.html
+++ b/index.html
@@ -104,6 +104,9 @@
                 });
 
                 calendar1.render();
+
+                //Second calendar - Redigere rådighed dato
+
                 var calendarEl = document.getElementById("calendar2");
                 var calendar2 = new FullCalendar.Calendar(calendarEl, {
                     timeZone: "local",
@@ -112,6 +115,28 @@
                     initialView: "dayGridMonth",
                     height: 500,
                     headerToolbar: false,
+                    eventColor: "#00904A",
+
+                    dateClick: function (info) {
+                        let date = Date.parse(info.dateStr);
+
+                        var event = calendar2.getEventById(date);
+
+                        if (event !== null) {
+                            event.remove();
+                        } else {
+                            if (!isNaN(date.valueOf())) {
+                                calendar2.addEvent({
+                                    id: date,
+                                    title: "",
+                                    start: date,
+                                    allDay: true,
+                                });
+                            } else {
+                                alert("Ugyldig dato");
+                            }
+                        }
+                    },
                 });
                 calendar2.render();
 
@@ -174,15 +199,17 @@
         <!-- Modal -->
 
         <!-- Button trigger modal -->
-        <button
-            type="button"
-            class="btn btn-primary"
-            data-bs-toggle="modal"
-            data-bs-target="#exampleModal"
-            id="availability"
-        >
-            Launch demo modal
-        </button>
+        <div class="text-center my-5">
+            <button
+                type="button"
+                class="btn btn-success"
+                data-bs-toggle="modal"
+                data-bs-target="#exampleModal"
+                id="availability"
+            >
+                Rediger rådighed
+            </button>
+        </div>
 
         <!-- Modal -->
         <div
@@ -195,7 +222,6 @@
             <div class="modal-dialog">
                 <div class="modal-content">
                     <div class="modal-header">
-                        <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
                         <button
                             type="button"
                             class="btn-close"
@@ -204,13 +230,22 @@
                         ></button>
                     </div>
                     <div class="modal-body">
-                        <div class="calendar" id="calendar2"></div>
+                        <h2 class="text-center text-success mb-5">Vælg periode eller dato</h2>
+                        <div class="d-flex justify-content-center mx-auto">
+                            <label class="text-success mx-3"
+                                >Fra
+                                <input type="date" class="form-control" />
+                            </label>
+                            <label class="text-success mx-3"
+                                >Til
+                                <input type="date" class="form-control" />
+                            </label>
+                        </div>
+                        <div class="calendar my-4" id="calendar2"></div>
                     </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
-                            Close
-                        </button>
-                        <button type="button" class="btn btn-primary">Save changes</button>
+
+                    <div class="text-center my-4">
+                        <button type="button" class="btn btn-success">Gem</button>
                     </div>
                 </div>
             </div>
