--- a/index.html
+++ b/index.html
@@ -2,33 +2,45 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
+        <!--Linker til Fullcalendar script-->
         <script src="lib/main.js"></script>
+        <!--Linker til nyest Bootstrap css-->
         <link
             href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.css"
             rel="stylesheet"
         />
+        <!--Linker til Gammel Bootstrap css som Fullcalender brugte til at style-->
         <link
             href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.0/dist/css/bootstrap.css"
             rel="stylesheet"
         />
+        <!--Linker til Fontawesome css-->
         <link
             href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.13.1/css/all.css"
             rel="stylesheet"
         />
+        <!--Liker til Bootstrap script via CDN-->
         <script
             src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
             crossorigin="anonymous"
         ></script>
+        <!--Linker til Jquery script-->
         <script
             src="https://code.jquery.com/jquery-3.6.0.min.js"
             integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
             crossorigin="anonymous"
         ></script>
+        <!--Linker til Fullcalender default css-->
         <link href="lib/main.css" rel="stylesheet" />
+
+        <!--Script Start-->
         <script>
+            //Tilføjer en eventlistner på selve DOM som derefter viser vores Fullcalender og functionalittet til den
             document.addEventListener("DOMContentLoaded", function () {
+                //Definere en variable ved navn calendarEl og derefter giver den id fra Calendar1 diven
                 var calendarEl = document.getElementById("calendar1");
+                //Definere en variable Calendar1 som instansiere en ny FulLcalender
                 var calendar1 = new FullCalendar.Calendar(calendarEl, {
                     timeZone: "local",
                     firstDay: 1,
@@ -37,40 +49,55 @@
                     height: "auto",
                     headerToolbar: false,
                     eventColor: "#ffae42",
-                    dateClick: function (info) {
+                    //inbygget function i Fullcalendar som gør det muligt at klikke på en dato
+                    dateClick: function (info, dateStr) {
+                        //Tager modalens id og bruger en bootstrap function som viser modalen til brugeren når man klikker på en dato
+                        $("#onDateClickModal").modal("show");
+
+                        //if statment som checker om inputfields ikke er tomme
                         if (info.dayEl.dataset.availableFrom || info.dayEl.dataset.availableTo) {
+                            //Skriver fra og til tidsrum ud
                             $("#dateStatus").html(
                                 info.dayEl.dataset.availableFrom +
                                     " - " +
                                     info.dayEl.dataset.availableTo
                             );
+                            //Gemmer fra og til tidsrum når de er fyldte
                             $("#fra").val(info.dayEl.dataset.availableFrom);
                             $("#til").val(info.dayEl.dataset.availableTo);
+                            //Else statement som skriver ledig ud hvis de er tomme inputs fieldsne
                         } else {
                             $("#dateStatus").html("Ledig");
                             $("#fra,#til").val("");
                         }
+                        //Dato formatering til dd-mm-yyyy istedet form normal iso8061 som er yyyy-mm-dd
+                        var dateFormatted = new Intl.DateTimeFormat("en-GB").format(dateStr);
+                        //Printer ud dagens dato på modalen
+                        $("#dateDate").html(dateFormatted);
 
-                        //Add availability on button click
-                        $("#dateDate").html(info.dateStr);
-                        $("#onDateClickModal").modal("show");
-
+                        //frabinder ændringen fra input fieldet
                         $("#fra,#til").unbind("change");
+                        //Tilføjer en function som checker på at input fields er blevet brugt
                         $("#fra,#til").on("change", function () {
                             $("#dateStatus").html(fra.value + " - " + til.value);
                         });
-
+                        //Frabinder klik på gem saveDateInfo
                         $("#saveDateInfo").unbind("click");
+                        //Tilføjer en function som lytter om man har klikket på saveDateInfo knappen
                         $("#saveDateInfo").click(function () {
+                            //if statment som checker om der er input på input fieldsne
                             if ($("#fra").val() && $("#til").val()) {
+                                //Tilføjer en custom dataset til fra input field
                                 info.dayEl.dataset.availableFrom = fra.value;
+                                //Tiføjer en custom dataset til til input field
                                 info.dayEl.dataset.availableTo = til.value;
-
+                                //Laver 3 forskellige variabler
                                 let startTime = info.dayEl.dataset.availableFrom;
                                 let endTime = info.dayEl.dataset.availableTo;
+                                //En metode som gør det muligt at returnere datoen til et number i miliseconder siden 1970
                                 let date = Date.parse(info.dateStr);
+                                //if-statement der siger gør et eller andet hvis date ikke ikke er et tal
                                 if (!isNaN(date.valueOf())) {
-                                    // valid?
                                     calendar1.addEvent({
                                         id: 1,
                                         title: startTime + " - " + endTime,
@@ -78,17 +105,18 @@
                                         allDay: true,
                                     });
                                 } else {
-                                    alert("Invalid date.");
+                                    alert("Invalid time.");
                                 }
+                                //Skjuler modalen med en Bootstrap metode
                                 $("#onDateClickModal").modal("hide");
                             } else {
                                 alert("Tidsrum skal udfyldes");
                             }
                             /*  if ( $("#fra").val() && $("#til").val() == not){ */
                         });
-
+                        //Frabinder kliks fra funktion så det ikke dubleres
                         $("#clearDateInfo").unbind("click");
-                        //Delete all info from date on button click
+                        //Afmeld knap som sletter eventet og reseter values
                         $("#clearDateInfo").click(function () {
                             $("#onDateClickModal").modal("hide");
                             $("#dateStatus").html("Ledig");
@@ -101,10 +129,12 @@
                         });
                     },
                 });
-
+                //Render(viser) den store kalender
                 calendar1.render();
 
-                //Second calendar - Redigere rådighed dato
+                //Kalender 2 start
+
+                //Opretter en array som skal indholde singleDateClicks
                 var singleDateClicks = [];
                 var calendarEl = document.getElementById("calendar2");
                 var calendar2 = new FullCalendar.Calendar(calendarEl, {
@@ -115,7 +145,7 @@
                     height: 500,
                     headerToolbar: false,
                     eventColor: "#00904A",
-
+                    //Dato klik funktion start
                     dateClick: function (info) {
                         let date = Date.parse(info.dateStr);
                         var event = calendar2.getEventById(date);
@@ -125,31 +155,32 @@
                             start: date,
                             allDay: true,
                         };
-                        /* for (var i = 0; i < singleDateClicks.length; i++) {
-                            singleDateClicks.push(eventObj1);
-                        } */
+                        //Tilføjer hvert event ind i singleDateClicks arryet
                         singleDateClicks.push(eventObj1);
-                        console.log(singleDateClicks);
+                        //If statment som checker om der er et event på datoen hvis event findes kan den fjernes igen ved nyt klik
                         if (event !== null) {
                             event.remove();
+                            //hvis dato er klikked forbliver den grøn
                         } else {
                             if (!isNaN(date.valueOf())) {
                                 calendar2.addEvent(eventObj1);
-                            } else {
-                                alert("Ugyldig dato");
                             }
                         }
                     },
                 });
+                //Rendere kalender 2
                 calendar2.render();
 
+                //Når availability knappen bliver klikket auto resizer den efter 210ms
                 $("#availability").on("click", function () {
                     setTimeout(function () {
                         calendar2.updateSize();
                     }, 210);
                 });
 
+                //Initilaztion af en varibel med navn eventObj2
                 var eventObj2;
+                //En function som returnere et tomt object
                 function isObjectEmpty(object) {
                     var isEmpty = true;
                     for (keys in object) {
@@ -159,8 +190,10 @@
                     return isEmpty;
                 }
 
+                //Klik function som gemmer en længere periode udfra input fields
                 $("#savePeriod").on("click", function () {
                     let start = Date.parse(document.getElementById("datoStart").value);
+                    //Tilføjer 86400000 sekunder til slut dagen som gør at den får den korrekte længde
                     let end = Date.parse(document.getElementById("datoEnd").value) + 86400000;
 
                     eventObj2 = {
@@ -173,22 +206,31 @@
 
                     calendar2.addEvent(eventObj2);
                 });
+
+                //Funktion som gør det muligt at gemme hver dato der er klikket på i kalender2 ind på kalender1
                 $("#saveToCalender").on("click", function () {
+                    //if statment som checker om singleDateClicks array er tomt hvis ikke adder den det til kalender1
                     if (singleDateClicks.length > 0) {
+                        //for loop som gør det muligt at tilføje flere events til singleDateClicks arrayet
                         for (var i = 0; i < singleDateClicks.length; i++) {
                             calendar1.addEvent(singleDateClicks[i]);
                         }
                     }
+                    //Hvis functionen isObjectEmpty ikke er tomt tilføj eventet fra kalender 2 til 1
                     if (!isObjectEmpty(eventObj2)) {
                         calendar1.addEvent(eventObj2);
                     }
+                    //Skjul event
                     $("#periodeModal").modal("hide");
                 });
             });
         </script>
+        <!--Script Slut-->
     </head>
     <body>
+        <!--Viser kalender1-->
         <div id="calendar1"></div>
+        <!--Modal til stor kalender-->
         <div
             class="modal fade"
             id="onDateClickModal"
@@ -233,11 +275,11 @@
                 </div>
             </div>
         </div>
-        <div class="calendar-wrapper" id="calendar-wrapper"></div>
 
-        <!-- Modal -->
+        <!--????-->
+        <!--<div class="calendar-wrapper" id="calendar-wrapper"></div>-->
 
-        <!-- Button trigger modal -->
+        <!--Knap til at åbne modal til redigering af rådighed-->
         <div class="text-center my-5">
             <button
                 type="button"
@@ -250,7 +292,6 @@
             </button>
         </div>
 
-        <!-- Modal -->
         <div
             class="modal fade"
             id="periodeModal"
